--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,9 @@
       "esModuleInterop": true,
       "moduleResolution": "node",
       "typeRoots": ["types","node_modules/@types"],
-      "sourceMap": true
+      "sourceMap": false
     },
-    "include": ["./src/**/*.ts", "convert2json.ts"],
+    "include": ["./src/**/*.ts"],
     "exclude":["./**/*.test.ts","./example"]
     
   }
